xhci: Add support for 64-bit DMA in generic XHCI controller driver

The XHCI controller on 64-bit SoCs need to use 64-bit DMA.
Add a quirk to tell the generic XHCI driver that 32-bit DMA needs
to be used, if there are any that may need to use 32-bit DMA only.

PR:		274237
Reviewed by:	andrew
Obtained from:	Juniper Networks, Inc.

(cherry picked from commit 332af8c25dfc9857e997817281d7b7fa406783ef)